# PhynixEngine

./: CMakeLists.txt  README.md  main.cpp
Engine/: Application.cpp  Application.h  Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Scene.h
Engine/Scenes/: BaseScene.h
External Dependancys/GameNetworkingSockets/lib/: GameNetworkingSockets.lib
